Fix nav bar spacing

--- a/frontend/src/css/components/main.scss
+++ b/frontend/src/css/components/main.scss
@@ -4,7 +4,8 @@
             position: fixed;
             display: flex;
             justify-content: center;
-            align-items: center;
+            // align-items: center;
+            padding-top: 10px;
             height: 100%;
             width: 100%;
             // background-repeat: no-repeat;
